lab3/Parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    NEWLINE

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement_list single_statement
Rule 3     statement_list -> single_statement
Rule 4     single_statement -> declaration ENDSTR
Rule 5     single_statement -> setting ENDSTR
Rule 6     single_statement -> if
Rule 7     single_statement -> dowhile
Rule 8     single_statement -> function
Rule 9     single_statement -> callfunc ENDSTR
Rule 10    single_statement -> cmd ENDSTR
Rule 11    single_statement -> ENDSTR
Rule 12    declaration -> type var
Rule 13    type -> INT
Rule 14    type -> BOOL
Rule 15    type -> SHORT INT
Rule 16    type -> SHORT
Rule 17    var -> setting
Rule 18    var -> var COMMA var
Rule 19    var -> VARIABLE
Rule 20    setting -> variable SET expr
Rule 21    expr -> variable
Rule 22    expr -> const
Rule 23    expr -> math_expr
Rule 24    expr -> callfunc
Rule 25    expr -> cmd
Rule 26    expr -> OPBR expr CLBR
Rule 27    setting -> variable SET setarr
Rule 28    type -> vectorof
Rule 29    vectorof -> VECTOROF type
Rule 30    setarr -> CUOPBR setarr CUCLBR
Rule 31    setarr -> setarr COMMA setarr
Rule 32    setarr -> CUOPBR exprarr CUCLBR
Rule 33    exprarr -> exprarr COMMA exprarr
Rule 34    exprarr -> expr
Rule 35    const -> digit
Rule 36    const -> bool
Rule 37    const -> sizeof
Rule 38    variable -> VARIABLE
Rule 39    variable -> VARIABLE index
Rule 40    index -> SQOPBR expr SQCLBR
Rule 41    index -> index index
Rule 42    sizeof -> SIZEOF OPBR type CLBR
Rule 43    sizeof -> SIZEOF OPBR variable CLBR
Rule 44    bool -> TRUE
Rule 45    bool -> FALSE
Rule 46    bool -> UNDEFINED
Rule 47    digit -> INTTYP
Rule 48    digit -> SHORTTYP
Rule 49    math_expr -> expr SUB expr
Rule 50    math_expr -> expr ADD expr
Rule 51    math_expr -> expr SECOND LARGER expr
Rule 52    math_expr -> expr SECOND SMALLER expr
Rule 53    math_expr -> expr FIRST LARGER expr
Rule 54    math_expr -> expr FIRST SMALLER expr
Rule 55    math_expr -> expr AND expr
Rule 56    math_expr -> expr OR expr
Rule 57    math_expr -> expr NOT AND expr
Rule 58    math_expr -> expr NOT OR expr
Rule 59    callfunc -> VARIABLE OPBR varlist CLBR
Rule 60    varlist -> variable
Rule 61    varlist -> const
Rule 62    varlist -> varlist COMMA varlist
Rule 63    if -> IF expr THEN statement_gr ELSE statement_gr
Rule 64    if -> IF expr THEN statement_gr error
Rule 65    if -> IF expr error
Rule 66    statement_gr -> BEGIN statement_list END
Rule 67    statement_gr -> single_statement
Rule 68    dowhile -> DO statement_gr WHILE expr ENDSTR
Rule 69    dowhile -> DO error
Rule 70    function -> FUNCTION VARIABLE OPBR arrtype CLBR statement_gr RETURN expr ENDSTR
Rule 71    arrtype -> type VARIABLE
Rule 72    arrtype -> arrtype COMMA arrtype
Rule 73    cmd -> MOVE
Rule 74    cmd -> MOVE dir
Rule 75    cmd -> RIGHT
Rule 76    cmd -> LEFT
Rule 77    cmd -> LMS
Rule 78    dir -> RIGHT
Rule 79    dir -> LEFT

Terminals, with rules where they appear

ADD                  : 50
AND                  : 55 57
BEGIN                : 66
BOOL                 : 14
CLBR                 : 26 42 43 59 70
COMMA                : 18 31 33 62 72
CUCLBR               : 30 32
CUOPBR               : 30 32
DO                   : 68 69
ELSE                 : 63
END                  : 66
ENDSTR               : 4 5 9 10 11 68 70
FALSE                : 45
FIRST                : 53 54
FUNCTION             : 70
IF                   : 63 64 65
INT                  : 13 15
INTTYP               : 47
LARGER               : 51 53
LEFT                 : 76 79
LMS                  : 77
MOVE                 : 73 74
NEWLINE              : 
NOT                  : 57 58
OPBR                 : 26 42 43 59 70
OR                   : 56 58
RETURN               : 70
RIGHT                : 75 78
SECOND               : 51 52
SET                  : 20 27
SHORT                : 15 16
SHORTTYP             : 48
SIZEOF               : 42 43
SMALLER              : 52 54
SQCLBR               : 40
SQOPBR               : 40
SUB                  : 49
THEN                 : 63 64
TRUE                 : 44
UNDEFINED            : 46
VARIABLE             : 19 38 39 59 70 71
VECTOROF             : 29
WHILE                : 68
error                : 64 65 69

Nonterminals, with rules where they appear

arrtype              : 70 72 72
bool                 : 36
callfunc             : 9 24
cmd                  : 10 25
const                : 22 61
declaration          : 4
digit                : 35
dir                  : 74
dowhile              : 7
expr                 : 20 26 34 40 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 63 64 65 68 70
exprarr              : 32 33 33
function             : 8
if                   : 6
index                : 39 41 41
math_expr            : 23
program              : 0
setarr               : 27 30 31 31
setting              : 5 17
single_statement     : 2 3 67
sizeof               : 37
statement_gr         : 63 63 64 68 70
statement_list       : 1 2 66
type                 : 12 29 42 71
var                  : 12 18 18
variable             : 20 21 27 43 60
varlist              : 59 62 62
vectorof             : 28

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement_list single_statement
    (3) statement_list -> . single_statement
    (4) single_statement -> . declaration ENDSTR
    (5) single_statement -> . setting ENDSTR
    (6) single_statement -> . if
    (7) single_statement -> . dowhile
    (8) single_statement -> . function
    (9) single_statement -> . callfunc ENDSTR
    (10) single_statement -> . cmd ENDSTR
    (11) single_statement -> . ENDSTR
    (12) declaration -> . type var
    (20) setting -> . variable SET expr
    (27) setting -> . variable SET setarr
    (63) if -> . IF expr THEN statement_gr ELSE statement_gr
    (64) if -> . IF expr THEN statement_gr error
    (65) if -> . IF expr error
    (68) dowhile -> . DO statement_gr WHILE expr ENDSTR
    (69) dowhile -> . DO error
    (70) function -> . FUNCTION VARIABLE OPBR arrtype CLBR statement_gr RETURN expr ENDSTR
    (59) callfunc -> . VARIABLE OPBR varlist CLBR
    (73) cmd -> . MOVE
    (74) cmd -> . MOVE dir
    (75) cmd -> . RIGHT
    (76) cmd -> . LEFT
    (77) cmd -> . LMS
    (13) type -> . INT
    (14) type -> . BOOL
    (15) type -> . SHORT INT
    (16) type -> . SHORT
    (28) type -> . vectorof
    (38) variable -> . VARIABLE
    (39) variable -> . VARIABLE index
    (29) vectorof -> . VECTOROF type

    ENDSTR          shift and go to state 5
    IF              shift and go to state 14
    DO              shift and go to state 15
    FUNCTION        shift and go to state 16
    VARIABLE        shift and go to state 17
    MOVE            shift and go to state 18
    RIGHT           shift and go to state 19
    LEFT            shift and go to state 20
    LMS             shift and go to state 21
    INT             shift and go to state 22
    BOOL            shift and go to state 23
    SHORT           shift and go to state 24
    VECTOROF        shift and go to state 26

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    single_statement               shift and go to state 3
    declaration                    shift and go to state 4
    setting                        shift and go to state 6
    if                             shift and go to state 7
    dowhile                        shift and go to state 8
    function                       shift and go to state 9
    callfunc                       shift and go to state 10
    cmd                            shift and go to state 11
    type                           shift and go to state 12
    variable                       shift and go to state 13
    vectorof                       shift and go to state 25

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (2) statement_list -> statement_list . single_statement
    (4) single_statement -> . declaration ENDSTR
    (5) single_statement -> . setting ENDSTR
    (6) single_statement -> . if
    (7) single_statement -> . dowhile
    (8) single_statement -> . function
    (9) single_statement -> . callfunc ENDSTR
    (10) single_statement -> . cmd ENDSTR
    (11) single_statement -> . ENDSTR
    (12) declaration -> . type var
    (20) setting -> . variable SET expr
    (27) setting -> . variable SET setarr
    (63) if -> . IF expr THEN statement_gr ELSE statement_gr
    (64) if -> . IF expr THEN statement_gr error
    (65) if -> . IF expr error
    (68) dowhile -> . DO statement_gr WHILE expr ENDSTR
    (69) dowhile -> . DO error
    (70) function -> . FUNCTION VARIABLE OPBR arrtype CLBR statement_gr RETURN expr ENDSTR
    (59) callfunc -> . VARIABLE OPBR varlist CLBR
    (73) cmd -> . MOVE
    (74) cmd -> . MOVE dir
    (75) cmd -> . RIGHT
    (76) cmd -> . LEFT
    (77) cmd -> . LMS
    (13) type -> . INT
    (14) type -> . BOOL
    (15) type -> . SHORT INT
    (16) type -> . SHORT
    (28) type -> . vectorof
    (38) variable -> . VARIABLE
    (39) variable -> . VARIABLE index
    (29) vectorof -> . VECTOROF type

    $end            reduce using rule 1 (program -> statement_list .)
    ENDSTR          shift and go to state 5
    IF              shift and go to state 14
    DO              shift and go to state 15
    FUNCTION        shift and go to state 16
    VARIABLE        shift and go to state 17
    MOVE            shift and go to state 18
    RIGHT           shift and go to state 19
    LEFT            shift and go to state 20
    LMS             shift and go to state 21
    INT             shift and go to state 22
    BOOL            shift and go to state 23
    SHORT           shift and go to state 24
    VECTOROF        shift and go to state 26

    single_statement               shift and go to state 27
    declaration                    shift and go to state 4
    setting                        shift and go to state 6
    if                             shift and go to state 7
    dowhile                        shift and go to state 8
    function                       shift and go to state 9
    callfunc                       shift and go to state 10
    cmd                            shift and go to state 11
    type                           shift and go to state 12
    variable                       shift and go to state 13
    vectorof                       shift and go to state 25

state 3

    (3) statement_list -> single_statement .

    ENDSTR          reduce using rule 3 (statement_list -> single_statement .)
    IF              reduce using rule 3 (statement_list -> single_statement .)
    DO              reduce using rule 3 (statement_list -> single_statement .)
    FUNCTION        reduce using rule 3 (statement_list -> single_statement .)
    VARIABLE        reduce using rule 3 (statement_list -> single_statement .)
    MOVE            reduce using rule 3 (statement_list -> single_statement .)
    RIGHT           reduce using rule 3 (statement_list -> single_statement .)
    LEFT            reduce using rule 3 (statement_list -> single_statement .)
    LMS             reduce using rule 3 (statement_list -> single_statement .)
    INT             reduce using rule 3 (statement_list -> single_statement .)
    BOOL            reduce using rule 3 (statement_list -> single_statement .)
    SHORT           reduce using rule 3 (statement_list -> single_statement .)
    VECTOROF        reduce using rule 3 (statement_list -> single_statement .)
    $end            reduce using rule 3 (statement_list -> single_statement .)
    END             reduce using rule 3 (statement_list -> single_statement .)


state 4

    (4) single_statement -> declaration . ENDSTR

    ENDSTR          shift and go to state 28


state 5

    (11) single_statement -> ENDSTR .

    ENDSTR          reduce using rule 11 (single_statement -> ENDSTR .)
    IF              reduce using rule 11 (single_statement -> ENDSTR .)
    DO              reduce using rule 11 (single_statement -> ENDSTR .)
    FUNCTION        reduce using rule 11 (single_statement -> ENDSTR .)
    VARIABLE        reduce using rule 11 (single_statement -> ENDSTR .)
    MOVE            reduce using rule 11 (single_statement -> ENDSTR .)
    RIGHT           reduce using rule 11 (single_statement -> ENDSTR .)
    LEFT            reduce using rule 11 (single_statement -> ENDSTR .)
    LMS             reduce using rule 11 (single_statement -> ENDSTR .)
    INT             reduce using rule 11 (single_statement -> ENDSTR .)
    BOOL            reduce using rule 11 (single_statement -> ENDSTR .)
    SHORT           reduce using rule 11 (single_statement -> ENDSTR .)
    VECTOROF        reduce using rule 11 (single_statement -> ENDSTR .)
    $end            reduce using rule 11 (single_statement -> ENDSTR .)
    WHILE           reduce using rule 11 (single_statement -> ENDSTR .)
    END             reduce using rule 11 (single_statement -> ENDSTR .)
    ELSE            reduce using rule 11 (single_statement -> ENDSTR .)
    error           reduce using rule 11 (single_statement -> ENDSTR .)
    RETURN          reduce using rule 11 (single_statement -> ENDSTR .)


state 6

    (5) single_statement -> setting . ENDSTR

    ENDSTR          shift and go to state 29


state 7

    (6) single_statement -> if .

    ENDSTR          reduce using rule 6 (single_statement -> if .)
    IF              reduce using rule 6 (single_statement -> if .)
    DO              reduce using rule 6 (single_statement -> if .)
    FUNCTION        reduce using rule 6 (single_statement -> if .)
    VARIABLE        reduce using rule 6 (single_statement -> if .)
    MOVE            reduce using rule 6 (single_statement -> if .)
    RIGHT           reduce using rule 6 (single_statement -> if .)
    LEFT            reduce using rule 6 (single_statement -> if .)
    LMS             reduce using rule 6 (single_statement -> if .)
    INT             reduce using rule 6 (single_statement -> if .)
    BOOL            reduce using rule 6 (single_statement -> if .)
    SHORT           reduce using rule 6 (single_statement -> if .)
    VECTOROF        reduce using rule 6 (single_statement -> if .)
    $end            reduce using rule 6 (single_statement -> if .)
    WHILE           reduce using rule 6 (single_statement -> if .)
    END             reduce using rule 6 (single_statement -> if .)
    ELSE            reduce using rule 6 (single_statement -> if .)
    error           reduce using rule 6 (single_statement -> if .)
    RETURN          reduce using rule 6 (single_statement -> if .)


state 8

    (7) single_statement -> dowhile .

    ENDSTR          reduce using rule 7 (single_statement -> dowhile .)
    IF              reduce using rule 7 (single_statement -> dowhile .)
    DO              reduce using rule 7 (single_statement -> dowhile .)
    FUNCTION        reduce using rule 7 (single_statement -> dowhile .)
    VARIABLE        reduce using rule 7 (single_statement -> dowhile .)
    MOVE            reduce using rule 7 (single_statement -> dowhile .)
    RIGHT           reduce using rule 7 (single_statement -> dowhile .)
    LEFT            reduce using rule 7 (single_statement -> dowhile .)
    LMS             reduce using rule 7 (single_statement -> dowhile .)
    INT             reduce using rule 7 (single_statement -> dowhile .)
    BOOL            reduce using rule 7 (single_statement -> dowhile .)
    SHORT           reduce using rule 7 (single_statement -> dowhile .)
    VECTOROF        reduce using rule 7 (single_statement -> dowhile .)
    $end            reduce using rule 7 (single_statement -> dowhile .)
    WHILE           reduce using rule 7 (single_statement -> dowhile .)
    END             reduce using rule 7 (single_statement -> dowhile .)
    ELSE            reduce using rule 7 (single_statement -> dowhile .)
    error           reduce using rule 7 (single_statement -> dowhile .)
    RETURN          reduce using rule 7 (single_statement -> dowhile .)


state 9

    (8) single_statement -> function .

    ENDSTR          reduce using rule 8 (single_statement -> function .)
    IF              reduce using rule 8 (single_statement -> function .)
    DO              reduce using rule 8 (single_statement -> function .)
    FUNCTION        reduce using rule 8 (single_statement -> function .)
    VARIABLE        reduce using rule 8 (single_statement -> function .)
    MOVE            reduce using rule 8 (single_statement -> function .)
    RIGHT           reduce using rule 8 (single_statement -> function .)
    LEFT            reduce using rule 8 (single_statement -> function .)
    LMS             reduce using rule 8 (single_statement -> function .)
    INT             reduce using rule 8 (single_statement -> function .)
    BOOL            reduce using rule 8 (single_statement -> function .)
    SHORT           reduce using rule 8 (single_statement -> function .)
    VECTOROF        reduce using rule 8 (single_statement -> function .)
    $end            reduce using rule 8 (single_statement -> function .)
    WHILE           reduce using rule 8 (single_statement -> function .)
    END             reduce using rule 8 (single_statement -> function .)
    ELSE            reduce using rule 8 (single_statement -> function .)
    error           reduce using rule 8 (single_statement -> function .)
    RETURN          reduce using rule 8 (single_statement -> function .)


state 10

    (9) single_statement -> callfunc . ENDSTR

    ENDSTR          shift and go to state 30


state 11

    (10) single_statement -> cmd . ENDSTR

    ENDSTR          shift and go to state 31


state 12

    (12) declaration -> type . var
    (17) var -> . setting
    (18) var -> . var COMMA var
    (19) var -> . VARIABLE
    (20) setting -> . variable SET expr
    (27) setting -> . variable SET setarr
    (38) variable -> . VARIABLE
    (39) variable -> . VARIABLE index

    VARIABLE        shift and go to state 34

    var                            shift and go to state 32
    setting                        shift and go to state 33
    variable                       shift and go to state 13

state 13

    (20) setting -> variable . SET expr
    (27) setting -> variable . SET setarr

    SET             shift and go to state 35


state 14

    (63) if -> IF . expr THEN statement_gr ELSE statement_gr
    (64) if -> IF . expr THEN statement_gr error
    (65) if -> IF . expr error
    (21) expr -> . variable
    (22) expr -> . const
    (23) expr -> . math_expr
    (24) expr -> . callfunc
    (25) expr -> . cmd
    (26) expr -> . OPBR expr CLBR
    (38) variable -> . VARIABLE
    (39) variable -> . VARIABLE index
    (35) const -> . digit
    (36) const -> . bool
    (37) const -> . sizeof
    (49) math_expr -> . expr SUB expr
    (50) math_expr -> . expr ADD expr
    (51) math_expr -> . expr SECOND LARGER expr
    (52) math_expr -> . expr SECOND SMALLER expr
    (53) math_expr -> . expr FIRST LARGER expr
    (54) math_expr -> . expr FIRST SMALLER expr
    (55) math_expr -> . expr AND expr
    (56) math_expr -> . expr OR expr
    (57) math_expr -> . expr NOT AND expr
    (58) math_expr -> . expr NOT OR expr
    (59) callfunc -> . VARIABLE OPBR varlist CLBR
    (73) cmd -> . MOVE
    (74) cmd -> . MOVE dir
    (75) cmd -> . RIGHT
    (76) cmd -> . LEFT
    (77) cmd -> . LMS
    (47) digit -> . INTTYP
    (48) digit -> . SHORTTYP
    (44) bool -> . TRUE
    (45) bool -> . FALSE
    (46) bool -> . UNDEFINED
    (42) sizeof -> . SIZEOF OPBR type CLBR
    (43) sizeof -> . SIZEOF OPBR variable CLBR

    OPBR            shift and go to state 42
    VARIABLE        shift and go to state 43
    MOVE            shift and go to state 18
    RIGHT           shift and go to state 19
    LEFT            shift and go to state 20
    LMS             shift and go to state 21
    INTTYP          shift and go to state 47
    SHORTTYP        shift and go to state 48
    TRUE            shift and go to state 49
    FALSE           shift and go to state 50
    UNDEFINED       shift and go to state 51
    SIZEOF          shift and go to state 52

    expr                           shift and go to state 36
    variable                       shift and go to state 37
    const                          shift and go to state 38
    math_expr                      shift and go to state 39
    callfunc                       shift and go to state 40
    cmd                            shift and go to state 41
    digit                          shift and go to state 44
    bool                           shift and go to state 45
    sizeof                         shift and go to state 46

state 15

    (68) dowhile -> DO . statement_gr WHILE expr ENDSTR
    (69) dowhile -> DO . error
    (66) statement_gr -> . BEGIN statement_list END
    (67) statement_gr -> . single_statement
    (4) single_statement -> . declaration ENDSTR
    (5) single_statement -> . setting ENDSTR
    (6) single_statement -> . if
    (7) single_statement -> . dowhile
    (8) single_statement -> . function
    (9) single_statement -> . callfunc ENDSTR
    (10) single_statement -> . cmd ENDSTR
    (11) single_statement -> . ENDSTR
    (12) declaration -> . type var
    (20) setting -> . variable SET expr
    (27) setting -> . variable SET setarr
    (63) if -> . IF expr THEN statement_gr ELSE statement_gr
    (64) if -> . IF expr THEN statement_gr error
    (65) if -> . IF expr error
    (68) dowhile -> . DO statement_gr WHILE expr ENDSTR
    (69) dowhile -> . DO error
    (70) function -> . FUNCTION VARIABLE OPBR arrtype CLBR statement_gr RETURN expr ENDSTR
    (59) callfunc -> . VARIABLE OPBR varlist CLBR
    (73) cmd -> . MOVE
    (74) cmd -> . MOVE dir
    (75) cmd -> . RIGHT
    (76) cmd -> . LEFT
    (77) cmd -> . LMS
    (13) type -> . INT
    (14) type -> . BOOL
    (15) type -> . SHORT INT
    (16) type -> . SHORT
    (28) type -> . vectorof
    (38) variable -> . VARIABLE
    (39) variable -> . VARIABLE index
    (29) vectorof -> . VECTOROF type

    error           shift and go to state 54
    BEGIN           shift and go to state 55
    ENDSTR          shift and go to state 5
    IF              shift and go to state 14
    DO              shift and go to state 15
    FUNCTION        shift and go to state 16
    VARIABLE        shift and go to state 17
    MOVE            shift and go to state 18
    RIGHT           shift and go to state 19
    LEFT            shift and go to state 20
    LMS             shift and go to state 21
    INT             shift and go to state 22
    BOOL            shift and go to state 23
    SHORT           shift and go to state 24
    VECTOROF        shift and go to state 26

    statement_gr                   shift and go to state 53
    single_statement               shift and go to state 56
    declaration                    shift and go to state 4
    setting                        shift and go to state 6
    if                             shift and go to state 7
    dowhile                        shift and go to state 8
    function                       shift and go to state 9
    callfunc                       shift and go to state 10
    cmd                            shift and go to state 11
    type                           shift and go to state 12
    variable                       shift and go to state 13
    vectorof                       shift and go to state 25

state 16

    (70) function -> FUNCTION . VARIABLE OPBR arrtype CLBR statement_gr RETURN expr ENDSTR

    VARIABLE        shift and go to state 57


state 17

    (59) callfunc -> VARIABLE . OPBR varlist CLBR
    (38) variable -> VARIABLE .
    (39) variable -> VARIABLE . index
    (40) index -> . SQOPBR expr SQCLBR
    (41) index -> . index index

    OPBR            shift and go to state 58
    SET             reduce using rule 38 (variable -> VARIABLE .)
    SQOPBR          shift and go to state 60

    index                          shift and go to state 59

state 18

    (73) cmd -> MOVE .
    (74) cmd -> MOVE . dir
    (78) dir -> . RIGHT
    (79) dir -> . LEFT

    ENDSTR          reduce using rule 73 (cmd -> MOVE .)
    THEN            reduce using rule 73 (cmd -> MOVE .)
    error           reduce using rule 73 (cmd -> MOVE .)
    SUB             reduce using rule 73 (cmd -> MOVE .)
    ADD             reduce using rule 73 (cmd -> MOVE .)
    SECOND          reduce using rule 73 (cmd -> MOVE .)
    FIRST           reduce using rule 73 (cmd -> MOVE .)
    AND             reduce using rule 73 (cmd -> MOVE .)
    OR              reduce using rule 73 (cmd -> MOVE .)
    NOT             reduce using rule 73 (cmd -> MOVE .)
    COMMA           reduce using rule 73 (cmd -> MOVE .)
    CLBR            reduce using rule 73 (cmd -> MOVE .)
    SQCLBR          reduce using rule 73 (cmd -> MOVE .)
    CUCLBR          reduce using rule 73 (cmd -> MOVE .)
    RIGHT           shift and go to state 62
    LEFT            shift and go to state 63

    dir                            shift and go to state 61

state 19

    (75) cmd -> RIGHT .

    ENDSTR          reduce using rule 75 (cmd -> RIGHT .)
    THEN            reduce using rule 75 (cmd -> RIGHT .)
    error           reduce using rule 75 (cmd -> RIGHT .)
    SUB             reduce using rule 75 (cmd -> RIGHT .)
    ADD             reduce using rule 75 (cmd -> RIGHT .)
    SECOND          reduce using rule 75 (cmd -> RIGHT .)
    FIRST           reduce using rule 75 (cmd -> RIGHT .)
    AND             reduce using rule 75 (cmd -> RIGHT .)
    OR              reduce using rule 75 (cmd -> RIGHT .)
    NOT             reduce using rule 75 (cmd -> RIGHT .)
    COMMA           reduce using rule 75 (cmd -> RIGHT .)
    CLBR            reduce using rule 75 (cmd -> RIGHT .)
    SQCLBR          reduce using rule 75 (cmd -> RIGHT .)
    CUCLBR          reduce using rule 75 (cmd -> RIGHT .)


state 20

    (76) cmd -> LEFT .

    ENDSTR          reduce using rule 76 (cmd -> LEFT .)
    THEN            reduce using rule 76 (cmd -> LEFT .)
    error           reduce using rule 76 (cmd -> LEFT .)
    SUB             reduce using rule 76 (cmd -> LEFT .)
    ADD             reduce using rule 76 (cmd -> LEFT .)
    SECOND          reduce using rule 76 (cmd -> LEFT .)
    FIRST           reduce using rule 76 (cmd -> LEFT .)
    AND             reduce using rule 76 (cmd -> LEFT .)
    OR              reduce using rule 76 (cmd -> LEFT .)
    NOT             reduce using rule 76 (cmd -> LEFT .)
    COMMA           reduce using rule 76 (cmd -> LEFT .)
    CLBR            reduce using rule 76 (cmd -> LEFT .)
    SQCLBR          reduce using rule 76 (cmd -> LEFT .)
    CUCLBR          reduce using rule 76 (cmd -> LEFT .)


state 21

    (77) cmd -> LMS .

    ENDSTR          reduce using rule 77 (cmd -> LMS .)
    THEN            reduce using rule 77 (cmd -> LMS .)
    error           reduce using rule 77 (cmd -> LMS .)
    SUB             reduce using rule 77 (cmd -> LMS .)
    ADD             reduce using rule 77 (cmd -> LMS .)
    SECOND          reduce using rule 77 (cmd -> LMS .)
    FIRST           reduce using rule 77 (cmd -> LMS .)
    AND             reduce using rule 77 (cmd -> LMS .)
    OR              reduce using rule 77 (cmd -> LMS .)
    NOT             reduce using rule 77 (cmd -> LMS .)
    COMMA           reduce using rule 77 (cmd -> LMS .)
    CLBR            reduce using rule 77 (cmd -> LMS .)
    SQCLBR          reduce using rule 77 (cmd -> LMS .)
    CUCLBR          reduce using rule 77 (cmd -> LMS .)


state 22

    (13) type -> INT .

    VARIABLE        reduce using rule 13 (type -> INT .)
    CLBR            reduce using rule 13 (type -> INT .)


state 23

    (14) type -> BOOL .

    VARIABLE        reduce using rule 14 (type -> BOOL .)
    CLBR            reduce using rule 14 (type -> BOOL .)


state 24

    (15) type -> SHORT . INT
    (16) type -> SHORT .

    INT             shift and go to state 64
    VARIABLE        reduce using rule 16 (type -> SHORT .)
    CLBR            reduce using rule 16 (type -> SHORT .)


state 25

    (28) type -> vectorof .

    VARIABLE        reduce using rule 28 (type -> vectorof .)
    CLBR            reduce using rule 28 (type -> vectorof .)


state 26

    (29) vectorof -> VECTOROF . type
    (13) type -> . INT
    (14) type -> . BOOL
    (15) type -> . SHORT INT
    (16) type -> . SHORT
    (28) type -> . vectorof
    (29) vectorof -> . VECTOROF type

    INT             shift and go to state 22
    BOOL            shift and go to state 23
    SHORT           shift and go to state 24
    VECTOROF        shift and go to state 26

    type                           shift and go to state 65
    vectorof                       shift and go to state 25

state 27

    (2) statement_list -> statement_list single_statement .
